--- a/espark-core/requirements.txt
+++ b/espark-core/requirements.txt
@@ -1,6 +1,6 @@
-aiomqtt==2.4.0
-apscheduler==3.11.1
-fastapi==0.124.0
-sqlalchemy==2.0.45
-sqlmodel==0.0.27
-uvicorn[standard]==0.38.0
+aiomqtt
+apscheduler
+fastapi
+sqlalchemy
+sqlmodel
+uvicorn[standard]
