Add device app version checking

--- a/espark-react/package.json
+++ b/espark-react/package.json
@@ -1,6 +1,6 @@
 {
     "name"             : "espark-react",
-    "version"          : "0.3.1",
+    "version"          : "0.4.0",
     "author"           : {
         "name" : "Alan Tai"
     },
@@ -33,8 +33,11 @@
         "build"   : "vite build && tsc -p tsconfig.build.json"
     },
     "peerDependencies" : {
-        "react"     : "^19.2.0",
-        "react-dom" : "^19.2.0"
+        "antd"          : "^6.1.0",
+        "i18next"       : "^25.7.2",
+        "react"         : "^19.2.0",
+        "react-dom"     : "^19.2.0",
+        "react-i18next" : "^16.4.1"
     },
     "dependencies"     : {
         "@ant-design/icons"                 : "^6.1.0",
@@ -45,10 +48,7 @@
         "@refinedev/core"                   : "^5.0.6",
         "@refinedev/react-router"           : "^2.0.3",
         "@tanstack/react-query"             : "^5.90.11",
-        "antd"                              : "^6.1.0",
         "date-fns"                          : "^4.1.0",
-        "i18next"                           : "^25.7.2",
-        "react-i18next"                     : "^16.4.1",
         "react-redux"                       : "^9.2.0",
         "react-router"                      : "^7.10.1",
         "string-to-color"                   : "^2.2.2"
@@ -60,7 +60,7 @@
         "@stylistic/eslint-plugin"   : "^5.6.1",
         "@testing-library/jest-dom"  : "^6.9.1",
         "@testing-library/react"     : "^16.3.0",
-        "@types/node"                : "^24.10.2",
+        "@types/node"                : "^25.0.0",
         "@types/react"               : "^19.2.7",
         "@types/react-dom"           : "^19.2.3",
         "@types/react-test-renderer" : "^19.1.0",
