--- a/.github/workflows/cd.yaml
+++ b/.github/workflows/cd.yaml
@@ -45,6 +45,9 @@ jobs:
       - name: Install dependencies
         run: pnpm i
         working-directory: espark-react
+      - name: Build package
+        run: pnpm build
+        working-directory: espark-react
       - name: Build and publish package
         run: pnpm publish --no-git-checks
         working-directory: espark-react
