Support appName and appVersion fields in frontend

--- a/espark-node/Makefile.template
+++ b/espark-node/Makefile.template
@@ -1,7 +1,6 @@
 BOARD    = ESP32-C3
 BAUD     = 460800
-# FIRMWARE = ~/Downloads/ESP32_GENERIC_C3-20250911-v1.26.1.bin
-FIRMWARE = ~/Downloads/ESP32_GENERIC_C3-20251208-v1.27.0-preview.503.g2bd337ef18.bin
+FIRMWARE = ~/Downloads/ESP32_GENERIC_C3-20251209-v1.27.0.bin
 
 run:
 	PYTHONPATH=. PYTHONDONTWRITEBYTECODE=1 python main.py
