Refactor notification; support latching relay

--- a/espark-node/.coveragerc
+++ b/espark-node/.coveragerc
@@ -2,6 +2,8 @@
 source = src
 omit =
     **/esp32_*.py
+    **/flip_flop_relay.py
+    **/latching_relay.py
     **/ld2420_trigger.py
     **/sht20_sensor.py
     **/voltage_sensor.py
@@ -19,7 +21,7 @@ exclude_lines =
     if __name__ == .__main__.:
     pass
     raise ImportError
-fail_under = 70
+fail_under = 65
 
 [html]
 directory = coverage_html
