--- a/espark-react/package.json
+++ b/espark-react/package.json
@@ -1,6 +1,6 @@
 {
     "name"             : "espark-react",
-    "version"          : "0.5.3",
+    "version"          : "0.5.4",
     "author"           : {
         "name" : "Alan Tai"
     },
@@ -44,11 +44,11 @@
         "@refinedev/antd"                   : "^6.0.3",
         "@refinedev/core"                   : "^5.0.6",
         "@refinedev/react-router"           : "^2.0.3",
-        "@tanstack/react-query"             : "^5.90.11",
-        "antd"                              : "^6.1.2",
+        "@tanstack/react-query"             : "^5.90.16",
+        "antd"                              : "^6.1.3",
         "date-fns"                          : "^4.1.0",
         "i18next"                           : "^25.7.3",
-        "react-i18next"                     : "^16.5.0",
+        "react-i18next"                     : "^16.5.1",
         "react-redux"                       : "^9.2.0",
         "react-router"                      : "^7.11.0",
         "string-to-color"                   : "^2.2.2"
@@ -64,7 +64,7 @@
         "@types/react"               : "^19.2.7",
         "@types/react-dom"           : "^19.2.3",
         "@types/react-test-renderer" : "^19.1.0",
-        "@typescript-eslint/parser"  : "^8.50.1",
+        "@typescript-eslint/parser"  : "^8.51.0",
         "@vitejs/plugin-react-swc"   : "^4.2.2",
         "@vitest/coverage-v8"        : "^4.0.16",
         "@vitest/ui"                 : "^4.0.16",
@@ -75,14 +75,17 @@
         "eslint-plugin-react"        : "^7.37.5",
         "eslint-plugin-react-hooks"  : "^7.0.1",
         "eslint-plugin-unicorn"      : "^62.0.0",
-        "globals"                    : "^16.5.0",
-        "jsdom"                      : "^27.3.0",
+        "globals"                    : "^17.0.0",
+        "jsdom"                      : "^27.4.0",
         "prop-types"                 : "^15.8.1",
         "typescript"                 : "^5.9.3",
-        "typescript-eslint"          : "^8.50.1",
+        "typescript-eslint"          : "^8.51.0",
         "vite"                       : "^7.3.0",
         "vitest"                     : "^4.0.16",
         "vitest-fetch-mock"          : "^0.4.5"
+    },
+    "resolutions"      : {
+        "qs" : "^6.14.1"
     },
     "engines"          : {
         "node" : ">=22",
