--- a/espark-react/package.json
+++ b/espark-react/package.json
@@ -1,6 +1,6 @@
 {
     "name"             : "espark-react",
-    "version"          : "0.5.10",
+    "version"          : "0.5.11",
     "author"           : {
         "name" : "Alan Tai"
     },
@@ -44,30 +44,29 @@
         "@refinedev/antd"                   : "^6.0.3",
         "@refinedev/core"                   : "^5.0.8",
         "@refinedev/react-router"           : "^2.0.3",
-        "@tanstack/react-query"             : "^5.90.17",
-        "antd"                              : "^6.2.0",
+        "@tanstack/react-query"             : "^5.90.20",
+        "antd"                              : "^6.2.3",
         "date-fns"                          : "^4.1.0",
-        "i18next"                           : "^25.7.4",
-        "react-i18next"                     : "^16.5.3",
+        "i18next"                           : "^25.8.0",
+        "react-i18next"                     : "^16.5.4",
         "react-redux"                       : "^9.2.0",
-        "react-router"                      : "^7.12.0",
+        "react-router"                      : "^7.13.0",
         "string-to-color"                   : "^2.2.2"
     },
     "devDependencies"  : {
         "@eslint/eslintrc"           : "^3.3.3",
         "@eslint/js"                 : "^9.39.2",
         "@refinedev/cli"             : "^2.16.50",
-        "@stylistic/eslint-plugin"   : "^5.7.0",
+        "@stylistic/eslint-plugin"   : "^5.7.1",
         "@testing-library/jest-dom"  : "^6.9.1",
-        "@testing-library/react"     : "^16.3.1",
-        "@types/node"                : "^25.0.8",
-        "@types/react"               : "^19.2.8",
+        "@testing-library/react"     : "^16.3.2",
+        "@types/react"               : "^19.2.10",
         "@types/react-dom"           : "^19.2.3",
         "@types/react-test-renderer" : "^19.1.0",
-        "@typescript-eslint/parser"  : "^8.53.0",
-        "@vitejs/plugin-react-swc"   : "^4.2.2",
-        "@vitest/coverage-v8"        : "^4.0.17",
-        "@vitest/ui"                 : "^4.0.17",
+        "@typescript-eslint/parser"  : "^8.54.0",
+        "@vitejs/plugin-react-swc"   : "^4.2.3",
+        "@vitest/coverage-v8"        : "^4.0.18",
+        "@vitest/ui"                 : "^4.0.18",
         "cross-env"                  : "^10.1.0",
         "eslint"                     : "^9.39.2",
         "eslint-plugin-import"       : "^2.32.0",
@@ -75,17 +74,19 @@
         "eslint-plugin-react"        : "^7.37.5",
         "eslint-plugin-react-hooks"  : "^7.0.1",
         "eslint-plugin-unicorn"      : "^62.0.0",
-        "globals"                    : "^17.0.0",
-        "jsdom"                      : "^27.4.0",
+        "globals"                    : "^17.3.0",
+        "jsdom"                      : "^28.0.0",
         "prop-types"                 : "^15.8.1",
         "typescript"                 : "^5.9.3",
-        "typescript-eslint"          : "^8.53.0",
+        "typescript-eslint"          : "^8.54.0",
         "vite"                       : "^7.3.1",
-        "vitest"                     : "^4.0.17",
+        "vitest"                     : "^4.0.18",
         "vitest-fetch-mock"          : "^0.4.5"
     },
     "resolutions"      : {
-        "qs" : "^6.14.1"
+        "qs"        : "^6.14.1",
+        "lodash"    : "^4.17.23",
+        "lodash-es" : "^4.17.23"
     },
     "engines"          : {
         "node" : ">=22",
